<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:clipChildren="false"
    tools:context=".activity.MainActivity" >

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?android:attr/actionBarSize" />

    <com.cliffracertech.bootycrate.view.BottomNavigationDrawer
        android:id="@+id/bottomNavigationDrawer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:translationY="-456dp"
        style="@style/BottomNavigationDrawer" >

        <com.cliffracertech.bootycrate.view.BootyCrateBottomAppBar
            android:id="@+id/bottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="top"
            style="@style/BottomAppBar" >
        </com.cliffracertech.bootycrate.view.BootyCrateBottomAppBar>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appTitle"
            android:layout_width="wrap_content"
            android:layout_height="?android:attr/actionBarSize"
            android:layout_gravity="top|start"
            android:layout_marginStart="24dp"
            style="@style/AppTitle" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsButton"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="60dp"
            style="@style/SettingsButton" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/itemGroupSelectorOptionsButton"
            android:layout_width="48dp"
            android:layout_height="56dp"
            android:layout_gravity="top|end"
            android:layout_marginEnd="12dp"
            style="@style/ItemGroupSelectorOptionsButton" />

        <FrameLayout
            android:id="@+id/itemGroupSelectorBackground"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:background="@drawable/background_gradient" >

            <com.cliffracertech.bootycrate.recyclerview.ItemGroupSelector
                android:id="@+id/itemGroupSelector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/item_group_selector"
                android:paddingTop="5dp"
                android:paddingBottom="60dp"
                android:visibility="invisible"
                android:alpha="0"
                tools:visibility="visible"
                tools:alpha="1"
                android:clipToPadding="false" />

            <ImageView
                android:id="@+id/addItemGroupButton"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/add_item_group_description"
                style="@style/AddButton"/>
        </FrameLayout>

    </com.cliffracertech.bootycrate.view.BottomNavigationDrawer>

</androidx.coordinatorlayout.widget.CoordinatorLayout>