<!-- Copyright 2021 Nicholas Hochstetler
  ~  You may not use this file except in compliance with the Apache License
  ~  Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
  ~  or in the file LICENSE in the project's root directory. -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/shoppingListButton"
          android:title="@string/shopping_list_navigation_item_name"
          android:icon="@drawable/shopping_cart_icon"
          android:orderInCategory="0" />

    <item android:enabled="false"
          android:title=""
          android:importantForAccessibility="no"
          android:orderInCategory="1" />

    <item android:enabled="false"
          android:title=""
          android:importantForAccessibility="no"
          android:orderInCategory="2" />

    <item android:id="@+id/inventoryButton"
          android:title="@string/inventory_navigation_item_name"
          android:icon="@drawable/inventory_icon"
          android:orderInCategory="3" />
</menu>