<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<resources>
    <string name="pref_category_display_title">Display</string>
    <string name="pref_light_dark_mode_title">App theme</string>

    <string name="pref_theme_match_system_title">Match system</string>
    <string name="pref_theme_light_theme_title">Light</string>
    <string name="pref_theme_dark_theme_title">Dark</string>

    <string name="pref_sort_by_checked_title">Sort by checked</string>
    <string name="pref_sort_by_checked_summary">Move checked items to the bottom of the shopping list.</string>

    <string name="pref_category_utility_title">Utility</string>
    <string name="pref_update_list_reminder_title">Update shopping list / inventory reminder</string>

    <string name="pref_import_database_title">Import database</string>
    <string name="pref_export_database_title">Export database</string>

    <string name="pref_category_about_title">About</string>
    <string name="pref_about_app_title">About BootyCrate</string>
    <string name="pref_open_source_libraries_used_title">Open source libraries used</string>
</resources>