<!-- Copyright 2021 Nicholas Hochstetler
   ~ You may not use this file except in compliance with the Apache License
   ~ Version 2.0, obtainable at http://www.apache.org/licenses/LICENSE-2.0
   ~ or in the file LICENSE in the project's root directory. -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/inventoryFragmentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.cliffracertech.bootycrate.recyclerview.InventoryView
        android:id="@+id/inventoryView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ItemList" />

    <TextSwitcher
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/itemListMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:inAnimation="@anim/fade_in"
        android:outAnimation="@anim/fade_out">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="@string/empty_list_message"
            style="@style/TitleTextAppearance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:text="@string/no_search_results_message"
            style="@style/TitleTextAppearance" />

    </TextSwitcher>

</FrameLayout>
